# warpsock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  node-release.yml  python-release.yml
benches/: streaming_vs_reqwest.rs
benches/native_h3_vs_rust_clients/: Cargo.toml
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/python/: Cargo.toml  README.md  README_PYPI.md  pyproject.toml  specter.pyi
bindings/python/python/specter/: __init__.py
bindings/python/python/warpsock/: __init__.py  warpsock.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_client.py
deprecated/crates/specters/: Cargo.toml
deprecated/python/specters/: README.md  pyproject.toml
docs/: rfc-compliance-matrix.md
docs/benchmarks/: RELEASE_PERFORMANCE.md
docs/benchmarks/2026-06-03-streaming/: README.md
docs/benchmarks/autobahn/: README.md
docs/benchmarks/autobahn/2026-07-07/: index.html  index.json  summary.txt
docs/benchmarks/conformance/2026-07-07-h2/: README.md
docs/benchmarks/conformance/2026-07-07-h3/: README.md
docs/benchmarks/native-h3-vs-rust-clients/: README.md
examples/: autobahn_echo.rs
scripts/: autobahn.sh  build-boringssl.sh  env.sh  extract-boringssl.sh  zig-cc-aarch64-linux-gnu  zig-cc-aarch64-linux-musl  zig-cc-x86_64-linux-gnu  zig-cc-x86_64-linux-musl  zig-cxx-aarch64-linux-gnu  zig-cxx-aarch64-linux-musl  zig-cxx-x86_64-linux-gnu  zig-cxx-x86_64-linux-musl
src/: lib.rs  response.rs
src/fingerprint/: http2.rs  mod.rs  profiles.rs
src/transport/: h1_h2.rs
src/transport/h2/: body.rs  connection.rs  driver.rs  frame.rs  handle.rs  mod.rs
src/transport/h3/: handle.rs  native.rs  native_driver.rs
src/websocket/: client.rs  connection.rs  extension.rs  frame.rs  handshake.rs  mod.rs
tests/: accept_encoding_default.rs  chrome_versions.rs  compression.rs  h1_request_streaming.rs  h1_streaming.rs  h2spec_client_conformance.rs  h3_native_codec.rs  h3_streaming_correctness.rs  rfc6455_websocket.rs  rfc7692_permessage_deflate.rs  rfc9112_http1.rs  rfc9114_http3_errors.rs  rfc9114_http3_protocol.rs  rfc9218_priorities.rs  streaming_public_api.rs  websocket_alloc_budget.rs
tests/helpers/: mock_h3_server.rs
