[package]
name = "warpsock-python"
version = "4.2.6"
edition = "2021"
license = "MIT"
description = "Python bindings for Warpsock HTTP client"
repository = "https://github.com/jaredboynton/warpsock"

[lib]
name = "warpsock"
crate-type = ["cdylib"]

[dependencies]
warpsock = { package = "warpsock", path = "../..", features = ["grpc"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
bytes = "1"
http = "1"
futures-core = "0.3"

[features]
default = []
