[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "warpsock"
version = "4.2.8"
description = "Python bindings for Warpsock, a Chrome-accurate HTTP client with TLS, HTTP/1.1, HTTP/2, HTTP/3, and WebSocket fingerprinting. Improved TTFT and TPS for LLMs."
readme = "README_PYPI.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["http", "http2", "http3", "tls", "fingerprint", "chrome", "browser", "impersonate", "websocket", "client", "async", "scraping", "llm", "streaming", "sse", "ttfb"]

[project.urls]
Homepage = "https://github.com/jaredboynton/warpsock"
Repository = "https://github.com/jaredboynton/warpsock"
Documentation = "https://github.com/jaredboynton/warpsock#readme"
Issues = "https://github.com/jaredboynton/warpsock/issues"
Changelog = "https://github.com/jaredboynton/warpsock/releases"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "maturin"]

[tool.maturin]
python-source = "python"
module-name = "warpsock.warpsock"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
