[build-system]
requires = ["setuptools>=69,<77", "wheel<0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "specters"
version = "4.2.6"
description = "Deprecated package name for Warpsock. Install warpsock instead."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Jared Boynton" }]
dependencies = ["warpsock==4.2.6"]
keywords = ["http", "http2", "http3", "tls", "fingerprint", "chrome", "browser", "websocket", "client", "async"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/jaredboynton/warpsock"
Repository = "https://github.com/jaredboynton/warpsock"
Migration = "https://github.com/jaredboynton/warpsock#readme"

[tool.setuptools]
packages = ["specter", "specters"]
